--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -53,3 +53,14 @@
     overflow: hidden;
     border: 2px solid black;
 }
+* {
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
