--- a/frontend/src/Styles/Logup.css
+++ b/frontend/src/Styles/Logup.css
@@ -1,1 +1,14 @@
-
+.SignUpButton{
+    position: relative;
+    padding: 0;
+    border: none;
+    background: none;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 200px;   
+    border-radius: 12px;
+    overflow: hidden;
+    border: 2px solid black;
+}
