--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -1,8 +1,8 @@
 .Banner {
-    background-color: rgb(64, 253, 30);
+    background-color: #2D033B;
     width: 100vw;
     height: 30vh;
-    color: #FFC107;
+    color: #FAFF81;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,25 +11,34 @@
 
 .Overlord {
     height: 100vh;
-    background-image: url(../assets/Gerbster.png);
-    background-size: 100% 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #322F42;
     margin: 0;
     padding: 0;
 }
+
+.ButtonContainer {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin-top: 20px;
+    padding: 5vh;
+}
+
 .ButtonImage{
     width: 100%;
-    height: 100%;
+    height: 70%;
     object-fit: cover;
     display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 .ButtonText{
     position: absolute;
-    top: 50%;
-    left: 50%;
     color:white;
     font-size: 30px;
     text-shadow:
@@ -37,9 +46,9 @@
      1px -1px 0 #000,
     -1px  1px 0 #000,
      1px  1px 0 #000;
-    justify-content: center;
-    align-self: center;
-    transform: translate(-50%, -50%); /*moves the text to actually be in the center*/
+    text-align: center;
+    width: 100%;
+    bottom: 10px;
 }
 .HomeScreenButton{
     position: relative;
@@ -49,139 +58,66 @@
     cursor: pointer;
     justify-content: center;
     align-items: center;
-    width: 200px;
+    width: 400px;
     height: 200px;   
     border-radius: 12px;
     overflow: hidden;
     border: 2px solid black;
 }
-* {
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
+.HomeScreenButton:hover{
+    border: 2px solid #4B3A70;
+    width: 420px;
+    height: 210px;
+    opacity: 0.7;
 }
-html, body {
-    margin: 0;
-    padding: 0;
+.ButtonBack{
+    opacity: 0;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px !important;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
+    text-align: center;
+    padding: 10px;
+    box-sizing: border-box;
+    background-color: #23212d;
 }
-
-.profile{
-    width: 100%;
-    min-height: 100vh;
-    background: #eceaff;
-    color: #525252;
-}
-
-nav{
-    background: #1a1a1a;
-    width: 100%;
-    padding: 10px 10%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.ButtonBack .ButtonText {
+    font-size: 25px !important;
     position: relative;
-}
-
-.logo{
-    width: 120px;
-}
-
-.user-pic{
-    width: 40px;
-    border-radius: 50;
-    cursor: pointer;
-    margin-left: 30px;
-}
-
-nav ul{
     width: 100%;
-    text-align: right;
-}
-
-nav ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 10px 20px;
-}
-
-nav ul li a{
-    color: #fff;
-    text-decoration: none;
-}
-
-.sub-menu-wrap{
-    position: absolute;
-    top: 100%;
-    right: 10%;
-    width: 320px;
-    max-height: 0px;
-    overflow: hidden;
-    transition: max-height 0.5s;
-}
-
-.sub-menu-wrap.open-menu{
-    max-height: 400px;
-}
-
-.sub-menu{
-    background: #fff;
-    padding: 20px;
-    margin: 10px;
-}
-
-.user-info{
     display: flex;
+    justify-content: center;
     align-items: center;
+    text-align: center;
+    max-width: 100%;
+    height: 100%; 
 }
-
-.user-info h3{
-    font-weight: 500;
+.HomeScreenButton:hover .ButtonFront{
+    opacity: 0;
 }
-
-.user-info img{
-    width: 60px;
-    border-radius: 50%;
-    margin-right: 15px;
+.HomeScreenButton:hover .ButtonBack{
+    opacity: 1;
 }
-.sub-menu hr{
-    border: 0;
-    height: 1px;
-    width: 100%;
-    background: #ccc;
-    margin: 15px 0 10px;
-}
-
-.sub-menu-link{
+.AllButtons {
     display: flex;
-    align-item: center;
-    text-decoration: none;
-    color: #525252;
-    margin: 12px 0;
-}
-
-.sub-menu-link p{
-    width: 100%;
-}
-
-.sub-menu-link img{
-    width: 40px;
-    background: #e5e5e5;
-    border-radius: 50%;
-    padding: 8px;
-    margin-right: 15px;
-}
-
-.sub-menu-link span{
-    font-size: 22px;
-    transition: transform 0.5s;
-}
-
-.sub-menu-link: hover span{
-    transform: translateX(5px);
-}
-
-.sub-menu-link:hover p{
-    font-weight: 600;
+    flex-direction: row;
+    flex-wrap: wrap;  /* Allows buttons to wrap to next line */
+    justify-content: center;  /* Centers buttons horizontally */
+    align-items: center;  /* Centers buttons vertically */
+    gap: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 100%;  /* Takes full width */
+    max-width: 1400px;  /* Maximum width before wrapping */
+    margin-left: auto;  /* Centers the container */
+    margin-right: auto;  /* Centers the container */
+    flex: 1; 
+    overflow-y: auto; 
 }
