--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -17,7 +17,7 @@ body {
 display: block;
 }
 .Overlord {
-    height: 100vh;
+    height: calc(100vh - 60px);
     width: 100%;
     display: flex;
     flex-direction: column;
