--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -73,6 +73,7 @@ display: block;
     border-radius: 12px;
     overflow: hidden;
     border: 2px solid black;
+    padding: 30px;
 }
 .HomeScreenButton:hover{
     border: 2px solid #4B3A70;
