--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -74,6 +74,7 @@ display: block;
     overflow: hidden;
     border: 2px solid black;
     padding: 30px;
+    box-sizing: border-box;
 }
 .HomeScreenButton:hover{
     border: 2px solid #4B3A70;
