--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -59,6 +59,7 @@ display: block;
     text-align: center;
     width: 100%;
     bottom: 10px;
+    padding: 10px;
 }
 .HomeScreenButton{
     position: relative;
