--- a/frontend/src/Styles/Profile.css
+++ b/frontend/src/Styles/Profile.css
@@ -96,6 +96,13 @@ nav ul li a{
     margin: 15px 0 10px;
 }
 
+.sub-menu-link{
+    display: flex;
+    align-item: center;
+    text-decoration: none;
+    color: #525252;
+    margin: 12px 0;
+}
 
 .sub-menu-link p{
     width: 100%;
