--- a/frontend/src/Styles/Profile.css
+++ b/frontend/src/Styles/Profile.css
@@ -102,6 +102,7 @@ nav ul li a{
     text-decoration: none;
     color: #525252;
     margin: 12px 0;
+    border-radius: 5px;
 }
 
 .sub-menu-link p{
