--- a/frontend/src/Styles/Color.css
+++ b/frontend/src/Styles/Color.css
@@ -1,7 +1,7 @@
-#startButton {
+#color #startButton {
     margin-top: 200px;
   }
-  #gameDisplay{
+#color #gameDisplay{
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
@@ -9,10 +9,10 @@
       margin-left: 5%;
       visibility: hidden;
   }
-  #scoreDisplay{
+#color #scoreDisplay{
       visibility: hidden;
   }
-  #gameDisplay button{
+#color #gameDisplay button{
       margin: 20px;
       flex-basis: 20%;
       height: 5em;
