--- a/frontend/src/Styles/Color.css
+++ b/frontend/src/Styles/Color.css
@@ -11,6 +11,7 @@
   }
 #color #scoreDisplay{
       visibility: hidden;
+      margin-top: 100px;
   }
 #color #gameDisplay button{
       margin: 20px;
