--- a/frontend/src/Styles/Typing.css
+++ b/frontend/src/Styles/Typing.css
@@ -4,9 +4,12 @@
 #typing #gameDisplay{
     display: flex;
     z-index: 1;
+    width: 95%;
+    margin-left: 2.5%;
 }
 #typing #scoreDisplay{
     visibility: hidden;
+    margin-top: 100px;
 }
 
 #typing #output, #typing #message {
@@ -15,7 +18,6 @@
     flex-basis: 50%;
     font-size: 24px;
     min-height: 100px;
-    border: 1px solid red; /* Debug border */
     position: relative;
     z-index: 2;
 }
