Probalbly fixed mistakes leading to instability in typing game. Made leaderboard only show after game ends for color game. Removed alerts and replaced with console.logs so user experience is less trashy

--- a/frontend/src/Styles/Color.css
+++ b/frontend/src/Styles/Color.css
@@ -12,6 +12,7 @@
 #color #scoreDisplay{
       visibility: hidden;
       margin-top: 100px;
+      margin-bottom: 20px;
   }
 #color #gameDisplay button{
       margin: 20px;
