--- a/frontend/src/Styles/Typing.css
+++ b/frontend/src/Styles/Typing.css
@@ -1,6 +1,9 @@
 #typing #startButton {
   margin-top: 200px;
 }
+#typing{
+    margin-top: 120px;
+}
 #typing #gameDisplay{
     display: flex;
     z-index: 1;
@@ -9,7 +12,6 @@
 }
 #typing #scoreDisplay{
     visibility: hidden;
-    margin-top: 100px;
 }
 
 #typing #output, #typing #message {
