--- a/frontend/src/Styles/Color.css
+++ b/frontend/src/Styles/Color.css
@@ -1,6 +1,9 @@
 #color #startButton {
-    margin-top: 200px;
+    margin-top: 250px;
   }
+#color {
+  margin-top: 120px;
+}
 #color #gameDisplay{
       display: flex;
       flex-wrap: wrap;
@@ -11,7 +14,6 @@
   }
 #color #scoreDisplay{
       visibility: hidden;
-      margin-top: 100px;
       margin-bottom: 20px;
   }
 #color #gameDisplay button{
