--- a/frontend/src/Styles/Leaderboard.css
+++ b/frontend/src/Styles/Leaderboard.css
@@ -5,4 +5,10 @@
     background: #f3f3f3;
     border-radius: 8px;
     width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
+ol li{
+  padding-left: 10px;
+}
