--- a/frontend/src/Styles/Leaderboard.css
+++ b/frontend/src/Styles/Leaderboard.css
@@ -2,9 +2,8 @@
     margin-top: 20px;
     padding: 16px;
     text-align: left;
-    background: #f3f3f3;
     border-radius: 8px;
-    width: fit-content;
+    width: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
