--- a/frontend/src/Styles/Typing.css
+++ b/frontend/src/Styles/Typing.css
@@ -24,4 +24,12 @@
     z-index: 2;
 }
 
-
+.output2 {
+    z-index: 1;
+    padding: 20px;
+    text-align: left;
+    flex-basis: 50%;
+    font-size: 24px;
+    min-height: 100px;
+    position: relative;
+}
