--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,3 +42,11 @@
 .read-the-docs {
   color: #888;
 }
+.stretch {
+  min-height: 100vh !important;
+  width: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
+  background-color: #322F42 !important;
+}
