--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,4 +49,5 @@
   flex-direction: column !important;
   align-items: center !important;
   background-color: #322F42 !important;
+  color: #FAFF81 !important;
 }
