--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,6 +45,9 @@
 .stretch {
   min-height: 100vh;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
   background-color: #322F42 !important;
   color: #FAFF81 !important;
 }
